# fcg-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  shell.nix
.github/workflows/: docker.yml  rust.yml
data/: test-code.md  test-latex.md  test-list.md  test-markdown.md  test-obsidian.md  test-yaml-header.md  test_context.md  test_graph.md
src/: anki.rs  card.css  card.rs  config.rs  deck.rs  error.rs  main.rs  parser.rs
src/snapshots/: fcg__card__tests__asdf.snap  fcg__card__tests__convert_math.snap  fcg__card__tests__convert_obsidian_embeds.snap  fcg__card__tests__convert_obsidian_link.snap  fcg__parser__tests__parse_markdown.snap  fcg__parser__tests__parse_yaml.snap
