[package]
name = "fcg"
version = "0.1.0"
edition = "2021"

[dependencies]
genanki-rs = "0.3.0"
log = "0.4.17"
itertools = "0.10.5"
petgraph = "0.6.2"
structopt = "0.3.26"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
walkdir = "2.3.2"
comrak = "0.14.0"
regex = "1.6.0"
env_logger = "0.9.1"

[dev-dependencies]
insta = { version = "1.21.0", features = ["json", "yaml"] }
